Fixing Syntax - Fot

--- a/npcs/Eugene_Vardklemp.yaml
+++ b/npcs/Eugene_Vardklemp.yaml
@@ -402,7 +402,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Wide-eye with a consant bright smile (which looks odd on a goliath)
+    mannerisms:   Wide-eye with a consant bright smile. Which looks odd on a goliath.
 
   acting:
     #
