--- a/npcs/Gerhardt_Klippstein.yaml
+++ b/npcs/Gerhardt_Klippstein.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - Board of Directors of Collegium Imaginata
-    
 
     #
     # D & D classes (case insensitive):
@@ -298,7 +297,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -315,7 +313,6 @@ npc:
     - Vedalken
     - Gnomish
     - Elvish
-
 
     #
     # Factions:
@@ -339,7 +336,6 @@ npc:
     - id: Collegium_Imaginata
       name: Collegium Imaginata
       role: Director and Lead Designer
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -391,7 +387,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Mine Fire ees most efficient, No?" "Mine steam engine ees the future of travel" "Artifice is the future now!"
+    expressions:  
+    - "Mine Fire ees most efficient, No?"
+    - "Mine steam engine ees the future of travel"
+    - "Artifice is the future now!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -415,7 +414,7 @@ npc:
     #
     motivations: |
       Knowledge  
-      
+
     #
     # Passions:
     #
@@ -424,7 +423,7 @@ npc:
     #
     passions: |
       Efficiency and Perfection
-      
+
     #
     # Vulnerabilities:
     #
@@ -433,7 +432,7 @@ npc:
     #
     vulnerabilities: |
       he's cold and unfriendly and often rubs people the wrong way. He is a perfectionist which sometimes gets in his own and other peopls ways
-      
+
     #
     # Secrets:
     #
@@ -442,7 +441,7 @@ npc:
     #
     secrets: |
       He thinks he deserves Oswald Vardklemp's position as leader
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -467,51 +466,51 @@ npc:
   #
   specialties:
     skills:
-   - - Vedalken Abilities:
-        - Vedalken Dispassion: Advantage on all Intelligence, Wisdom and Charisma saving throws
-        - Tireless Precision: Proficient in Arcana and with Tinker's Tool and add 1d4 to any checks with those skills
-        - Partially Amphibious: Can breathe underwater for up to 1hr per long rest 
-        - Aether Lore: When making an intelligence (history) check related to magic items or technological devices, adds twice his proficiency bonus
- 
-   - - Artificer Abilities: 
-       - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-       - Spellcasting: Requires Tinker's Tools as Spellcasting focus, Spell DC 23
-         Cantrip: Shocking Grasp, Mage Hand, Mending, Create Bonfire, Fire Bolt
-         1st Level: Arcane Weapon, Detect Magic, Identify, Expedition Retreat, Grease
-         2nd Level: Arcane Lock, Continual Flame, Levitate, Magic Weapon
-         3rd Level: Dispel Magic, Haste, Tiny Servant, Fly
-         4th Level: Fabricate, Stone Shape, Summon Construct    
-       - Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,  
-       - The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
-       - Tool Expertise: Smith's Tool proficiency bonus is doubled
-       - Flash of Genius: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws
-       - Magic Item Adept: Crafting items of common or uncommon takes a quarter of the normal time and half the normal cost
-       - Spell Storing Item: Can store a spell in and object once per long rest
-       - Magic Item Savant: Can attune to any magic item regardless of class, race, spell and level requirements 
-      
-      
-   - - Armorer Abilities:
-       - Tool Proficiency: Proficiency with Thieve's Tools, Smith's Tools and Heavy Armor
-       - Spellcasting: Requires Smith's Tools as Spellcasting focus, Spell DC 23
-         3rd Level: Magic Missle, Shield
-         5th Level: Mirror Image, Shatter
-         9th Level: Hypnotic Patetrn, Fire Ball
-         13th Level: Fire Sheild, Greater Invisibility
-       - Power Armor: Powered Armor ignores strength requirements, can be used as his spellcasting focus, cannot be removed against his will and covers his entire body
-       - Infiltrator Armor: His powered armor has the Fire Launcher, Powered Steps & Second Skin abilities  
-       - Extra Attack: Can take a second attack action each turn
-       - Armor Modifications: Each part of his armor is consisdered seperate for the purpose of Infusion and the number of items he can infuse increases by 2 as long as theyre part of his armor
-       - Perfected Armor: Successful Fire Launcher attacks he makes cause targets to glimmer with light giving the next attack roll against it by another creature advantage and does an extra 1d6 Fire Damage
+    - Vedalken Abilities:
+      - Vedalken Dispassion: Advantage on all Intelligence, Wisdom and Charisma saving throws
+        Tireless Precision: Proficient in Arcana and with Tinker's Tool and add 1d4 to any checks with those skills
+        Partially Amphibious: Can breathe underwater for up to 1hr per long rest 
+        Aether Lore: When making an intelligence (history) check related to magic items or technological devices, adds twice his proficiency bonus
+      Artificer Abilities: 
+      - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
+        Spellcasting: 
+        - Description: Requires Tinker's Tools as Spellcasting focus, Spell DC 23
+          Cantrip: Shocking Grasp, Mage Hand, Mending, Create Bonfire, Fire Bolt
+          1st Level: Arcane Weapon, Detect Magic, Identify, Expedition Retreat, Grease
+          2nd Level: Arcane Lock, Continual Flame, Levitate, Magic Weapon
+          3rd Level: Dispel Magic, Haste, Tiny Servant, Fly
+          4th Level: Fabricate, Stone Shape, Summon Construct    
+        Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,  
+        The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
+        Tool Expertise: Smith's Tool proficiency bonus is doubled
+        Flash of Genius: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws
+        Magic Item Adept: Crafting items of common or uncommon takes a quarter of the normal time and half the normal cost
+        Spell Storing Item: Can store a spell in and object once per long rest
+        Magic Item Savant: Can attune to any magic item regardless of class, race, spell and level requirements 
+      Armorer Abilities:
+      - Tool Proficiency: Proficiency with Thieve's Tools, Smith's Tools and Heavy Armor
+        Spellcasting: 
+        - Description:Requires Smith's Tools as Spellcasting focus, Spell DC 23
+          3rd Level: Magic Missle, Shield
+          5th Level: Mirror Image, Shatter
+          9th Level: Hypnotic Patetrn, Fire Ball
+          13th Level: Fire Sheild, Greater Invisibility
+        Power Armor: Powered Armor ignores strength requirements, can be used as his spellcasting focus, cannot be removed against his will and covers his entire body
+        Infiltrator Armor: His powered armor has the Fire Launcher, Powered Steps & Second Skin abilities  
+        Extra Attack: Can take a second attack action each turn
+        Armor Modifications: Each part of his armor is consisdered seperate for the purpose of Infusion and the number of items he can infuse increases by 2 as long as theyre part of his armor
+        Perfected Armor: Successful Fire Launcher attacks he makes cause targets to glimmer with light giving the next attack roll against it by another creature advantage and does an extra 1d6 Fire Damage
 
     special-abilities: 
     - Feats: Keen Mind, Mounted Combatant, War Caster, Skill Expert - Smith's Tools, Observant, Heavy Armor Master
-    - Legendary Resistance: (2/Day), If Gerhardt Klippstein fails a saving throw he can choose to succeed instead 
-    - Legendary Actions: Gerhardt Klippstein can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                         Gerhardt Klippstein regains spent Legendary Actions at the start of his turn
-      - Fire Upgrade: Gerhardt Klippstein cast the Fireball spell through his armor's Fire Launcher at 3rd Level with a Dex DC of 19
-      - Fancy Armor: Gerhardt Klippstein can Infuse one section of his Power Armor with one of his Artificer's Infusions
-      - Escape Velocity: Gerhardt Klippstein can cast the Summon Construct Spell to summon his Steam Wagon, mount it and dash up to 80 feet
-
+      Legendary Resistance: (2/Day), If Gerhardt Klippstein fails a saving throw he can choose to succeed instead 
+      Legendary Actions:
+      - Descruotion: Gerhardt Klippstein can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
+                     Gerhardt Klippstein regains spent Legendary Actions at the start of his turn
+        Fire Upgrade: Gerhardt Klippstein cast the Fireball spell through his armor's Fire Launcher at 3rd Level with a Dex DC of 19
+        Fancy Armor: Gerhardt Klippstein can Infuse one section of his Power Armor with one of his Artificer's Infusions
+        Escape Velocity: Gerhardt Klippstein can cast the Summon Construct Spell to summon his Steam Wagon, mount it and dash up to 80 feet  
+    
     attacks: |
       Can make 2 attacks with his firearms and his Steel Defender can attack twice 
     combat-tactics: |
@@ -519,8 +518,8 @@ npc:
     special-equipment:
     - Full Plate Power Armor - See above for details, except his Power Armor has the ability to launch fire instead of lightning
     - Random Artifact Devices - Can be carrying whatever he needs
-    - Steam Wagon - His Steam Wagon resembles a regular wagon but has a large steam-belching engine on the back powered by his Artificer's Infusion. It can move on it's own without horses and answers his call. 
-                    It has a speed of 80 feet and can take 150HP damage before it stops running.
+    - Steam Wagon: His Steam Wagon resembles a regular wagon but has a large steam-belching engine on the back powered by his Artificer's Infusion. It can move on it's own without horses and answers his call. 
+                   It has a speed of 80 feet and can take 150HP damage before it stops running.
     
     
   profile:
@@ -551,32 +550,4 @@ npc:
       and intense. He is deeply devoted to arcane science and to his work. He firmly believes that the world should be orderly and efficient and that his work will help it become that way. He does not particularly 
       like people and rarely gets along with others but does appreciate scientific and arcane input from reputable sources. In typically dispassionate and detached Vedalken manner, he views the world through a 
       sterile lens and does his best strive for what he views as perfections and limitless efficiency. 
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+ f
