--- a/npcs/fuchsia.yaml
+++ b/npcs/fuchsia.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - The Low Queen's daughter
-    
 
     #
     # D & D classes (case insensitive):
@@ -298,7 +297,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -313,7 +311,6 @@ npc:
     languages:
     - Common
     - Dwarvish
-
 
     #
     # Factions:
@@ -358,7 +355,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  "Are you a giraffe?"  A young lady wrapped in swirls of black stands before you, hands on hips, head cocked to one side.
+    introduction:  /"Are you a giraffe?/"  A young lady wrapped in swirls of black stands before you, hands on hips, head cocked to one side.
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -385,7 +382,12 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Phony"; (derogatory) "that's very clever"; "Show me a story"; "Let's paint pebbles together"; "I hate everything."
+    expressions:
+    - "Phony"
+    - (derogatory) "that's very clever"
+    - "Show me a story"
+    - "Let's paint pebbles together"
+    - "I hate everything."
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -409,7 +411,7 @@ npc:
     #
     motivations: |
       She desires renown and will do whatever possible to be recognized for the beautiful noble that she believes herself to be
-      
+
     #
     # Passions:
     #
@@ -418,7 +420,7 @@ npc:
     #
     passions: |
       She longs for a man who reveres her.  She enjoys plays and clowns and impromptu acting
-      
+
     #
     # Vulnerabilities:
     #
@@ -427,7 +429,7 @@ npc:
     #
     vulnerabilities: |
       Hates everything and just about everybody.  Her imagination seeks escape from intellectual and artistic void of home
-      
+
     #
     # Secrets:
     #
@@ -436,8 +438,7 @@ npc:
     #
     secrets: | 
       N/A
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -462,16 +463,14 @@ npc:
   #
   specialties:
     skills:
-   - - Dwarf Abilities:
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+    - Dwarf Abilities:
+      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check,
                       instead of his normal Proficiency Bonus
-                      
-   - - Hill Dwarf Abilities:
+      Hill Dwarf Abilities:
        - Dwarven Toughness: Your hit point maximum increases by 1, and it increases by 1 every time you gain a level
-                  
-           
+
     special-abilities:
     - Proficiencies: Persuasion; Perception; Deception; Performance   
     attacks: |
@@ -480,7 +479,7 @@ npc:
       Fuchsia is frightfully brave in combat, although her skills don't quite match up
     special-equipment:
     - A ruby she keeps hidden at home locked in a dresser drawer for the right man
-                                                                   
+
   profile:
 
     #
@@ -496,7 +495,6 @@ npc:
       the presence of just about anyone who will listen, claiming that her mother, a barmaid named Clarice, is the Low Queen of the Region. She weaves stories about her life as the Low Queen's daughter at local taverns and
       mercantile houses, gaining quite an audience who are more than happy to pay for her discursive talent.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -507,32 +505,4 @@ npc:
     #
     personality: |
       N/A
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
