--- a/npcs/Gex.yaml
+++ b/npcs/Gex.yaml
@@ -317,7 +317,6 @@ npc:
     - Dwarvish
     - Thieve's Cant
 
-
     #
     # Factions:
     # These should be ids of factions (similar YAML file format, eventually).
@@ -417,7 +416,7 @@ npc:
     #
     motivations: |
       Information is power
-      
+
     #
     # Passions:
     #
@@ -426,7 +425,7 @@ npc:
     #
     passions: |
       In they're spare time they are an actor and musician in small local productions
-      
+
     #
     # Vulnerabilities:
     #
@@ -435,7 +434,7 @@ npc:
     #
     vulnerabilities: |
       Their true identity is their greatest weakness.  Because of their changeling nature, trust is rare in either direction
-      
+
     #
     # Secrets:
     #
@@ -444,8 +443,7 @@ npc:
     #
     secrets: | 
       They know all the secrets, and so do the people they work for
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -470,41 +468,40 @@ npc:
   #
   specialties:
     skills:
-   - - Changeling Abilities:
-       - Change Appearance: As an action, you can transform your appearance or revert to your natural form. You can’t duplicate the appearance of a creature you’ve never seen, and you revert to your natural form if you die.
-                            - You decide what you look like, including your height, weight, facial features, the sound of your voice, coloration, hair length, sex, and any other distinguishing characteristics. You can make
-                              yourself appear as a member of another race, though none of your game statistics change. You also can’t appear as a creature of a different size than you, and your basic shape stays the same; if
-                              you’re bipedal, you can’t use this trait to become quadrupedal, for instance. Your clothing and other equipment don’t change in appearance, size, or shape to match your new form, requiring you to
-                              keep a few extra outfits on hand to make the most compelling disguise possible.
-                            - Even to the most astute observers, your ruse is usually indiscernible. If you rouse suspicion, or if a wary creature suspects something is amiss, you have advantage on any Charisma (Deception) 
-                              check you make to avoid detection.
-       - Unsettling Visage: When a creature you can see makes an attack roll against you, you can use your reaction to impose disadvantage on the roll. You must use this feature before knowing whether the attack hits or misses.
-                            - Using this trait reveals your shapeshifting nature to any creature within 30 feet that can see you. Once you use this trait, you can’t use it again until you finish a short or long rest
-       - Divergent Persona: You gain proficiency with one tool of your choice. Define a unique identity associated with that proficiency; establish the name, race, gender, age, and other details. While you are in the form of
-                            this persona, the related proficiency bonus is doubled for any ability check you make that uses that proficiency
-       
-   - - Rogue Abilities:
-       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-       - Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-       
-   - - Spy Abilities:
-       - Tricks of the Trade: Proficiency in Disguise, Forgery, Poison Kits, Tinker's Tools and Gadget Box
-       - Imposter: Gain the ability to unerringly mimic another person's speech, writing and bahavior. You must spend at least three hours studying these components of these behaviors. Your ruse is your indiscernible to the
-                   casual observer. If a weary creature suspects something is amiss, you have advantage on Charisma (Deception) checks to avoid detection
-       - Gadget Box Spellcasting:
-         Cantrip: Mage Hand, Message
-         1st Level: Knock, Invisibility
-         2nd Level: Find Traps
-       - Gadget Box Self Destruct Mode: You can set a delay between 1 second and 24hrs. During that time the gadget box cannot be open by any means and cannot be used. At the end of that duration all creatures within 60ft must
+    - Changeling Abilities:
+      - Change Appearance: 
+        - As an action, you can transform your appearance or revert to your natural form. You can’t duplicate the appearance of a creature you’ve never seen, and you revert to your natural form if you die.
+        - You decide what you look like, including your height, weight, facial features, the sound of your voice, coloration, hair length, sex, and any other distinguishing characteristics. You can make
+          yourself appear as a member of another race, though none of your game statistics change. You also can’t appear as a creature of a different size than you, and your basic shape stays the same; if
+          you’re bipedal, you can’t use this trait to become quadrupedal, for instance. Your clothing and other equipment don’t change in appearance, size, or shape to match your new form, requiring you to
+          keep a few extra outfits on hand to make the most compelling disguise possible.
+        - Even to the most astute observers, your ruse is usually indiscernible. If you rouse suspicion, or if a wary creature suspects something is amiss, you have advantage on any Charisma (Deception)
+          check you make to avoid detection.
+        Unsettling Visage:
+        - When a creature you can see makes an attack roll against you, you can use your reaction to impose disadvantage on the roll. You must use this feature before knowing whether the attack hits or misses.
+        - Using this trait reveals your shapeshifting nature to any creature within 30 feet that can see you. Once you use this trait, you can’t use it again until you finish a short or long rest
+        Divergent Persona: You gain proficiency with one tool of your choice. Define a unique identity associated with that proficiency; establish the name, race, gender, age, and other details. While you are in the form of
+                           this persona, the related proficiency bonus is doubled for any ability check you make that uses that proficiency
+      Rogue Abilities:
+      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+        Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+      Spy Abilities:
+      - Tricks of the Trade: Proficiency in Disguise, Forgery, Poison Kits, Tinker's Tools and Gadget Box
+        Imposter: Gain the ability to unerringly mimic another person's speech, writing and bahavior. You must spend at least three hours studying these components of these behaviors. Your ruse is your indiscernible to the
+                  casual observer. If a weary creature suspects something is amiss, you have advantage on Charisma (Deception) checks to avoid detection
+        Gadget Box Spellcasting:
+        - Cantrip: Mage Hand, Message
+          1st Level: Knock, Invisibility
+          2nd Level: Find Traps
+        Gadget Box Self Destruct Mode: You can set a delay between 1 second and 24hrs. During that time the gadget box cannot be open by any means and cannot be used. At the end of that duration all creatures within 60ft must
                                         make a Constitution saving throw or take Xd6 force damage and be knocked prone, where X is your Rogue Level. Taking half damage on a successful save. It takes 1 weeks using tinker's tools
                                         to build a new box
-                          
-           
+
     special-abilities:
-    - Proficiencies: Persuasion; Perception; Deception; Performance   
+    - Proficiencies: Persuasion; Perception; Deception; Performance
     attacks: |
       1 attack with Poison Dagger
     combat-tactics: |
@@ -512,7 +509,7 @@ npc:
     special-equipment:
     - Gadget Box
     - Poison Dagger
-                                                                   
+
   profile:
 
     #
@@ -538,32 +535,3 @@ npc:
     #
     personality: |
       Looks like and behaves like anyone they need to
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
